--- a/frontend/src/pages/generate/gen.css
+++ b/frontend/src/pages/generate/gen.css
@@ -1,7 +1,3 @@
-.ListCard {
-    display: grid;
-    box-sizing: border-box;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 50px;
-    margin-top: 50px;
+body{
+    margin: 0px;
 }
