--- a/frontend/src/pages/register/register.css
+++ b/frontend/src/pages/register/register.css
@@ -8,3 +8,18 @@
     align-items: center;
     font-size: 16px;
 }
+
+.lcontainner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    padding: 50px;
+}
+
+.imgproflie{
+    width: 160px;
+    height: 160px;
+    align-items: center;
+}
