--- a/frontend/src/pages/component/BodyResult/bodyRe.css
+++ b/frontend/src/pages/component/BodyResult/bodyRe.css
@@ -17,17 +17,19 @@
 
 
 .stateform1{
+    overflow: auto;
     border-radius: 8px;
     border: 2px solid black;
     background-color: white;
     padding: 16px;
     display: flex;
     flex-direction: column;
-    overflow: auto;
+    
     height:700px;
     width: 1000px;
     margin: 7% 20%;
     position: absolute;
+    top: 5%;
 }
 
 .stateform2{
@@ -42,7 +44,9 @@
     width: 1000px;
     margin: 7% 20%;
     position: absolute;
+    top: 5%;
 }
+
 
 .boxclass1{
     display: flex;
@@ -83,8 +87,10 @@
 
 
 .btnsetting{
+    margin-top: auto;
     display: flex;
     justify-content: center;
+    gap: 10px;
 }
 
 .textBox{
@@ -95,4 +101,13 @@
     border-radius: 4px;
     height: 500px;
     width: 600px;
+}
+
+.iconcheck{
+    color:greenyellow;
+}
+
+
+.t1080{
+    height: 1080px;
 }
