--- a/frontend/src/pages/component/Body/bdhome.css
+++ b/frontend/src/pages/component/Body/bdhome.css
@@ -15,6 +15,7 @@ h1,h2,h3,div,p{
 }
 
 .left{
+    padding: 15px;
     color: white;
     display: flex;
     flex-direction: column;
@@ -37,13 +38,28 @@ h1,h2,h3,div,p{
 }
 
 .btnok{
-    border: 1px solid white;
+
+    border: 1px solid black;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 3.125rem;
     padding: 1rem 3.125rem;
     color: black;
     background-color: white;
+
+
+}
+.btnok:hover{
+
+    border: 1px solid white;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 3.125rem;
+    padding: 1rem 3.125rem;
+    color: white;
+    background-color: black;
+
+
 }
 
 .stateform{
